# mdkloc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  readme.md  textcov.txt
docs/: 2025.10.15 - REVIEW.md  2025.10.16 - Coverage Plan.md  2025.10.16 - Coverage Test Report.md  2025.10.16 - coverage.json  2025.10.16 - coverage.txt  2025.10.17 - Coverage Progress Summary.md  2025.10.17 - Coverage Recovery Plan.md  2025.10.19 - Coverage Progress Summary.md  2025.10.24 - CR - Full repository audit.md  2025.10.24 - CR - Repository review.md  2025.10.24 - PLAN - Audit remediation roadmap.md  2025.10.24 - REQS - Report remediation plan.md  2025.10.24 - SPEC - Code Review Guidance for AI Assistants.md  2025.10.25 - CR - Repository review.md  2025.10.25 - PLAN - Repository remediation plan.md  coverage-progress-2025-10-18.md  coverage-progress-summary-2025-10-19.md  coverage-summary-2025-10-19.md  coverage_improvement_plan.md  journal-2025-10-19.md  mdkloc_review_2025-10-26t172943z-2025.10.26 - CR - Full repository review.md  mdkloc_review_2025-10-26t172943z-2025.10.26 - PLAN - Remediation roadmap.md  mdkloc_review_2025-10-28t172043z-2025.10.28 - CR - Full repository review.md  mdkloc_review_2025-10-28t172043z-2025.10.28 - PLAN - Implementation roadmap.md  mdkloc_review_2025-10-28t172043z-2025.10.28 - SPEC - Comprehensive coding best practices guide (2025).md  progress-and-next-steps-2025-10-19.md  scan-directory-remaining-branches.md
journal/: 2025.10.24 - JRN - Code review guidance capture.md  2025.10.24 - JRN - Repository code review.md  (+4 more)
src/: main.rs  (+1 more)
(+42 files in other folders)
